--- a/VE_Builder/Utilities/gui/Makefile
+++ b/VE_Builder/Utilities/gui/Makefile
@@ -50,7 +50,7 @@ EXTRA_LIBS+= -lm ${WX_LIB} /lib/libuuid.so.1
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
 
 #add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
-include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
 
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer 
 vpath %.h    $(VE_SUITE_HOME)/VE_Xplorer 
