update to add sound capability to graphical plugins.  Added header files to project files...

--- a/VE_Conductor/GraphicalPluginLib.vcproj
+++ b/VE_Conductor/GraphicalPluginLib.vcproj
@@ -292,6 +292,9 @@
 		<Filter
 			Name="headers"
 			Filter=".h">
+			<File
+				RelativePath="..\VE_Xplorer\cfdVEBaseClass.h">
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
