--- a/VE_Xplorer/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/VE_XplorerLib.vcproj
@@ -428,6 +428,9 @@
 		<Filter
 			Name="headers"
 			Filter=".h">
+			<File
+				RelativePath=".\cfdSoundHandler.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
