makefile updates for new lib names

--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -50,14 +50,11 @@ all: $(DIRS)
 ${VE_SUITE_HOME}/VE_Builder/Translator \
 ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
 ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
+${VE_SUITE_HOME}/VE_Builder/Utilities \
+${VE_SUITE_HOME}/VEOpen \
 ${VE_SUITE_HOME}/VE_CE \
 ${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Xplorer::
-	cd $@ && $(MAKE)
-#${VE_SUITE_HOME}/VE_Builder/WX_Translator
-
-${VE_SUITE_HOME}/VEOpen \
-${VE_SUITE_HOME}/VE_Builder/Utilities::
 	cd $@ && $(MAKE)
 
 # -----------------------------------------------------------------------------
