--- a/VE_Conductor/Makefile.conductorlib
+++ b/VE_Conductor/Makefile.conductorlib
@@ -44,12 +44,7 @@ EXTRA_PATH_FOR_SOURCES+= \
 
 EXTRA_INCLUDES+= \
                -I$(VE_SUITE_HOME)/VEOpen/skel \
-               -I$(VE_SUITE_HOME)/VE_Conductor/Framework 
-
-ifeq ($(TAO_BUILD), TRUE)
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
-   EXEC_TAG = _tao
-endif
+               -I$(VE_SUITE_HOME)
 
 # for xercese includes
 ifdef XERCESCROOT
@@ -68,12 +63,10 @@ SRCS=\
    package.cpp \
 	string_ops.cpp 
 			
-EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
-
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
 
-APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/libVEConductorLib.so
+APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/libVE_ConductorLib.so
 #OBJDIR is the place that the object files are stored.
 OBJDIR= $(CFDHOSTTYPE)_VEConductorLib
 
@@ -86,14 +79,8 @@ default: all
 # 'mkdir -p' silently ignores, so no test needed. Works with multiple arguments.
 all:
 	mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)
-#	$(MAKE) lib
-#	$(MAKE) cxx_idl
-#	$(MAKE) java_idl
 	$(MAKE) -f Makefile.conductorlib NO_DEPEND=0 cxx
 	$(MAKE) -f Makefile.conductorlib $(APP_NAME)
-#	$(MAKE) java
-#	$(MAKE) NetworkTestBean.jar
-#	-$(MAKE) install
 
 srcdir= .
 
@@ -122,32 +109,10 @@ CXX_GEN_DIR= .
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
-lib:
-	cd $(VE_SUITE_HOME)/lib && $(MAKE)
-
-#cxx_idl: $(IDL_CXX_FILES)
-
-#%.cpp %.h: %.idl
-#	$(CXX_IDL) $(CXX_IDL_OPTS) $(CXX_IDL_INCLUDES) $<
-
-#java_idl: $(IDL_JAVA_FILES)
-
-#%.java: %.idl
-#	$(JAVA_IDL) $(JAVA_IDL_OPTS) $(JAVA_IDL_INCLUDES) $<
-
 cxx: $(OBJS)
-
-#java: $(CLASSES)
 
 ${APP_NAME}: $(OBJS)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-#$(TWEEK_LIBS) 
-#NetworkTestBean.jar: $(JAVA_CLASSES)
-#	$(JAR) cvf $@ $(ALL_CLASSES)
-
-#install:
-#	cp NetworkTestBean.jar $(TWEEK_BASE_DIR)/bin/beans
-#	cp $(srcdir)/NetworkTestBean.xml $(TWEEK_BASE_DIR)/bin/beans
 
 # in addition to the created *.o files and any core files, the following files will be removed during "gmake clean"
 CLEAN_FILES+= $(APP_NAME) $(OBJDIR)/* 
