--- a/VE_Xplorer/Makefile.utillib
+++ b/VE_Xplorer/Makefile.utillib
@@ -37,69 +37,13 @@
 #_______________________________________________________________________________
 
 CFDUNAME = $(shell uname)
-ifeq ($(SCENE_GRAPH), OSG)
-   OSG = _osg
-else
-   OSG =
-endif
-
-# If OMNI_HOME was defined in the script setup.tsh, 
-# then define CORBA_DEFINES, and CORBA_INCLUDES.
-ifdef OMNI_HOME
-   vpath %.cxx    ${CONDUCTOR_BASE_DIR}/impl
-
-   ifeq (${CFDUNAME},Linux)
-      CORBA_DEFINES = -D__OSVERSION__=2
-      CORBA_DEFINES += -D__x86__ -D__linux__
-      OMNI_LIB = ${OMNI_HOME}/lib
-   else
-      CORBA_DEFINES = -D__OSVERSION__=6
-      CORBA_DEFINES += -D__mips__ -D__irix__
-      OMNI_LIB = ${OMNI_HOME}/lib
-   endif
-
-   OMNILIB = -L${OMNI_LIB} -lomniORB4 -lomnithread -lomniDynamic4
-   
-   CORBA_INCLUDES = -I${OMNI_HOME}/include 
-   EXTRA_INCLUDES+= -I${CONDUCTOR_BASE_DIR}/impl \
-                     ${CORBA_INCLUDES}
-   EXEC_TAG =
-endif
-
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Conductor/impl \
-                        $(VE_SUITE_HOME)/VEOpen/skel \
-                        $(VE_SUITE_HOME)/VE_Conductor/Framework \
-                        $(VE_SUITE_HOME)/VE_CE \
-								$(VE_SUITE_HOME)/VE_Builder/Translator
-
-EXTRA_INCLUDES+= \
-               -I$(VE_SUITE_HOME)/VE_Conductor/impl \
-               -I$(VE_SUITE_HOME)/VEOpen/skel \
-               -I$(VE_SUITE_HOME)/VE_Conductor/Framework \
-               -I$(VE_SUITE_HOME)/VE_CE \
-					-I$(VE_SUITE_HOME)/VE_Builder/Translator
-
-ifeq ($(TAO_BUILD), TRUE)
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
-   EXEC_TAG = _tao
-endif
-
-# for osg and patented stuff
-ifeq ($(VE_PATENTED), TRUE)
-   EXTRA_CXXFLAGS+= -DVE_PATENTED
-   PATENTED_TAG=.vep
-endif
-
-# for xercese includes
-ifdef XERCESCROOT
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
-endif
 
 # IRIX needs these flags
 ifeq (${CFDUNAME},IRIX64)
    EXTRA_CXXFLAGS+= -D_IRIX
    EXTRA_LIBS+= -L/usr/freeware/lib32
 endif
+
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
@@ -110,36 +54,28 @@ SRCS=\
    readWriteVtkThings.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_SceneGraph
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_TextureBased
+EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
 
-   APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/libVEUtilLib.so
-   #OBJDIR is the place that the object files are stored.
-   OBJDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)$(OSG)
+APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/libVE_UtilLib.so
+#OBJDIR is the place that the object files are stored.
+OBJDIR= $(CFDHOSTTYPE)_VE_UtilLib
 
-   #DEPDIR is the place that the dependency files are stored.
-   DEPDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)$(OSG)
+#DEPDIR is the place that the dependency files are stored.
+DEPDIR= $(CFDHOSTTYPE)_VE_UtilLib
 
 default: all
 
 # Create the OS-dependent directory for the executable. If the dir exists, 
 # 'mkdir -p' silently ignores, so no test needed. Works with multiple arguments.
 all:
-	mkdir -p $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)
-#	$(MAKE) lib
-#	$(MAKE) cxx_idl
-#	$(MAKE) java_idl
+	mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)
 	$(MAKE) -f Makefile.utillib NO_DEPEND=0 cxx
 	$(MAKE) -f Makefile.utillib $(APP_NAME)
-#	$(MAKE) java
-#	$(MAKE) NetworkTestBean.jar
-#	-$(MAKE) install
 
 srcdir= .
 
@@ -147,20 +83,6 @@ srcdir= .
 NO_DEPEND= YES
 
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
-include $(DZR_BASE_DIR)/ext/vpr/dzr.vpr.mk
-
-
-ifeq ($(SCENE_GRAPH), OSG)
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.osg.mk
-else
-   include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.pf.mk
-endif
-# list the cpp and h files here
-#IDL_CXX_FILES= ${CONDUCTOR_BASE_DIR}/Observer.cpp \
-               ${CONDUCTOR_BASE_DIR}/VjObs.cpp \
-               ${CONDUCTOR_BASE_DIR}/Observer.h \
-               ${CONDUCTOR_BASE_DIR}/VjObs.h 
-
 
 # One of these must be uncommented.
 DEBUG_APP?= TRUE
@@ -171,55 +93,21 @@ EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 
 EXTRA_LIBS+= -shared
 
-ifeq ($(TAO_BUILD), TRUE)
-   #include ${VE_SUITE_HOME}/VE_Installer/dzr.ace_tao.mk
-   #EXTRA_CXXFLAGS+= -D_TAO
-   #EXTRA_LIBS+= ${ACE_LIBS} $(WX_LIB)
-   #$(VLDLIBS)
-else
-   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES)
-   EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) 
-endif
-
 LINKALL_ON= -all
 LINKALL_OFF=
 
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-#CLASSPATH= $(TWEEK_JARS)
-
 CXX_GEN_DIR= .
 
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
-lib:
-	cd $(VE_SUITE_HOME)/lib && $(MAKE)
-
-#cxx_idl: $(IDL_CXX_FILES)
-
-#%.cpp %.h: %.idl
-#	$(CXX_IDL) $(CXX_IDL_OPTS) $(CXX_IDL_INCLUDES) $<
-
-#java_idl: $(IDL_JAVA_FILES)
-
-#%.java: %.idl
-#	$(JAVA_IDL) $(JAVA_IDL_OPTS) $(JAVA_IDL_INCLUDES) $<
-
 cxx: $(OBJS)
-
-#java: $(CLASSES)
 
 ${APP_NAME}: $(OBJS)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-#$(TWEEK_LIBS) 
-#NetworkTestBean.jar: $(JAVA_CLASSES)
-#	$(JAR) cvf $@ $(ALL_CLASSES)
-
-#install:
-#	cp NetworkTestBean.jar $(TWEEK_BASE_DIR)/bin/beans
-#	cp $(srcdir)/NetworkTestBean.xml $(TWEEK_BASE_DIR)/bin/beans
 
 # in addition to the created *.o files and any core files, the following files will be removed during "gmake clean"
 CLEAN_FILES+= $(APP_NAME) $(OBJDIR)/* 
