--- a/VE_Xplorer/Makefile.xplorer
+++ b/VE_Xplorer/Makefile.xplorer
@@ -40,30 +40,7 @@ CFDUNAME = $(shell uname)
 ifeq ($(SCENE_GRAPH), OSG)
    OSG = _osg
 else
-   OSG =
-endif
-
-# If OMNI_HOME was defined in the script setup.tsh, 
-# then define CORBA_DEFINES, and CORBA_INCLUDES.
-ifdef OMNI_HOME
-   vpath %.cxx    ${CONDUCTOR_BASE_DIR}/impl
-
-   ifeq (${CFDUNAME},Linux)
-      CORBA_DEFINES = -D__OSVERSION__=2
-      CORBA_DEFINES += -D__x86__ -D__linux__
-      OMNI_LIB = ${OMNI_HOME}/lib
-   else
-      CORBA_DEFINES = -D__OSVERSION__=6
-      CORBA_DEFINES += -D__mips__ -D__irix__
-      OMNI_LIB = ${OMNI_HOME}/lib
-   endif
-
-   OMNILIB = -L${OMNI_LIB} -lomniORB4 -lomnithread -lomniDynamic4
-   
-   CORBA_INCLUDES = -I${OMNI_HOME}/include 
-   EXTRA_INCLUDES+= -I${CONDUCTOR_BASE_DIR}/impl \
-                     ${CORBA_INCLUDES}
-   EXEC_TAG =
+   OSG = _pf
 endif
 
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Conductor/impl \
@@ -127,11 +104,11 @@ EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_SceneGraph
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_TextureBased
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lGraphicalPlugin$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
-EXTRA_LIBS+= -lVEUtilLib
-EXTRA_LIBS+= -lVEXplorerLib$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
-EXTRA_LIBS+= -lVESceneGraphLib$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
-EXTRA_LIBS+= -lVETextureBasedLib$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
-EXTRA_LIBS+= -lVEConductorLib
+EXTRA_LIBS+= -lVE_UtilLib
+EXTRA_LIBS+= -lVE_XplorerLib$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
+EXTRA_LIBS+= -lVE_SceneGraphLib$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
+EXTRA_LIBS+= -lVE_TextureBasedLib$(EXEC_TAG)$(OSG)$(PATENTED_TAG)
+EXTRA_LIBS+= -lVE_ConductorLib
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
@@ -189,14 +166,8 @@ default: all
 # 'mkdir -p' silently ignores, so no test needed. Works with multiple arguments.
 all:
 	mkdir -p $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)
-#	$(MAKE) lib
-#	$(MAKE) cxx_idl
-#	$(MAKE) java_idl
 	$(MAKE) -f Makefile.xplorer NO_DEPEND=0 cxx
 	$(MAKE) -f Makefile.xplorer $(APP_NAME)
-#	$(MAKE) java
-#	$(MAKE) NetworkTestBean.jar
-#	-$(MAKE) install
 
 srcdir= .
 
@@ -212,12 +183,6 @@ ifeq ($(SCENE_GRAPH), OSG)
 else
    include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.pf.mk
 endif
-# list the cpp and h files here
-#IDL_CXX_FILES= ${CONDUCTOR_BASE_DIR}/Observer.cpp \
-               ${CONDUCTOR_BASE_DIR}/VjObs.cpp \
-               ${CONDUCTOR_BASE_DIR}/Observer.h \
-               ${CONDUCTOR_BASE_DIR}/VjObs.h 
-
 
 # One of these must be uncommented.
 DEBUG_APP?= TRUE
@@ -226,55 +191,21 @@ DEBUG_APP?= TRUE
 #EXTRA_DEBUG_FLAGS+= -g -D_DEBUG -gslim 
 EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 
-ifeq ($(TAO_BUILD), TRUE)
-   #include ${VE_SUITE_HOME}/VE_Installer/dzr.ace_tao.mk
-   #EXTRA_CXXFLAGS+= -D_TAO
-   #EXTRA_LIBS+= ${ACE_LIBS} $(WX_LIB)
-   #$(VLDLIBS)
-else
-   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES)
-   EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) 
-endif
-
 LINKALL_ON= -all
 LINKALL_OFF=
 
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-#CLASSPATH= $(TWEEK_JARS)
-
 CXX_GEN_DIR= .
 
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
-lib:
-	cd $(VE_SUITE_HOME)/lib && $(MAKE)
-
-#cxx_idl: $(IDL_CXX_FILES)
-
-#%.cpp %.h: %.idl
-#	$(CXX_IDL) $(CXX_IDL_OPTS) $(CXX_IDL_INCLUDES) $<
-
-#java_idl: $(IDL_JAVA_FILES)
-
-#%.java: %.idl
-#	$(JAVA_IDL) $(JAVA_IDL_OPTS) $(JAVA_IDL_INCLUDES) $<
-
 cxx: $(OBJS)
-
-#java: $(CLASSES)
 
 ${APP_NAME}: $(OBJS)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-#$(TWEEK_LIBS) 
-#NetworkTestBean.jar: $(JAVA_CLASSES)
-#	$(JAR) cvf $@ $(ALL_CLASSES)
-
-#install:
-#	cp NetworkTestBean.jar $(TWEEK_BASE_DIR)/bin/beans
-#	cp $(srcdir)/NetworkTestBean.xml $(TWEEK_BASE_DIR)/bin/beans
 
 # in addition to the created *.o files and any core files, the following files will be removed during "gmake clean"
 CLEAN_FILES+= $(APP_NAME) $(OBJDIR)/* 
