more makefile changes

--- a/VE_Xplorer/Makefile.graphicalpluginlib
+++ b/VE_Xplorer/Makefile.graphicalpluginlib
@@ -44,8 +44,8 @@ endif
 
 # for osg and patented stuff
 ifeq ($(VE_PATENTED), TRUE)
-   EXTRA_CXXFLAGS+= -D_OSG -DVE_PATENTED
-   PATENTED_TAG = .vep
+   EXTRA_CXXFLAGS+= -DVE_PATENTED
+   PATENTED_TAG = _vep
 endif
 
 # IRIX needs these flags
