--- a/VE_SceneGraph/Makefile.scenegraphlib
+++ b/VE_SceneGraph/Makefile.scenegraphlib
@@ -40,7 +40,7 @@ endif
 # for osg and patented stuff
 ifeq ($(VE_PATENTED), TRUE)
    EXTRA_CXXFLAGS+= -DVE_PATENTED
-   PATENTED_TAG = .vep
+   PATENTED_TAG = _vep
 endif
 
 # IRIX needs these flags
