added transient dialog.  TRANSIENT_PLAY,TRANSIENT_STOP,TRANSIENT_FORWARD,TRANSIENT_BACKWARD are the enums passed back from the dialog to Xplorer.

--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -675,6 +675,9 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="..\Ve_ui\UI_TransientDialog.cxx">
+			</File>
+			<File
 				RelativePath="..\Ve_ui\UI_TransTab.cpp">
 			</File>
 			<File
@@ -833,6 +836,9 @@
 			</File>
 			<File
 				RelativePath="..\VE_UI\UI_TeacherTab.h">
+			</File>
+			<File
+				RelativePath="..\Ve_ui\UI_TransientDialog.h">
 			</File>
 			<File
 				RelativePath="..\Ve_ui\UI_TransTab.h">
