--- a/VE_Builder/Translator/Translator.vcproj
+++ b/VE_Builder/Translator/Translator.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="Preprocessor"
-	ProjectGUID="{62B3D30E-0B3D-4348-933D-97E8792ABFDE}"
+	Name="Translator"
+	ProjectGUID="{DDAC25AA-FE00-4DC7-AEEB-E2CB732E0A7B}"
 	Keyword="Win32Proj">
 	<Platforms>
 		<Platform
@@ -20,10 +20,10 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)&quot;;&quot;$(VTK_HOME)\include\vtk&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VTK44"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE,VTK_STREAMS_FWD_ONLY,VTK44"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="5"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
@@ -32,12 +32,12 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib VE_UtilLib_tao_osg_d.lib"
-				OutputFile="$(OutDir)/Preprocessor.exe"
+				AdditionalDependencies="VE_UtilLib_tao_osg_d.lib vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib vtkHybrid.lib"
+				OutputFile="$(OutDir)/Translator.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(VTK_HOME)\lib\vtk&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
+				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/Preprocessor.pdb"
+				ProgramDatabaseFile="$(OutDir)/Translator.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -70,7 +70,6 @@
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="$(VE_SUITE_HOME)\VE_Builder\fileIOlib"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="4"
 				UsePrecompiledHeader="0"
@@ -81,10 +80,8 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib readWriteVtkThings.lib"
-				OutputFile="$(OutDir)/Preprocessor.exe"
+				OutputFile="$(OutDir)/Translator.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(VTK_HOME)\lib\vtk"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -120,13 +117,67 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
-				RelativePath=".\multiPlaneVtkOutput.cxx">
+				RelativePath=".\ansysReader.cpp">
 			</File>
 			<File
-				RelativePath=".\preprocessor.cxx">
+				RelativePath=".\avsReader.cpp">
 			</File>
 			<File
-				RelativePath="..\Utilities\setScalarAndVector.cpp">
+				RelativePath=".\cfdGrid2Surface.cpp">
+			</File>
+			<File
+				RelativePath=".\converter.cpp">
+			</File>
+			<File
+				RelativePath=".\en7Reader.cpp">
+			</File>
+			<File
+				RelativePath=".\enSightGoldReader.cpp">
+			</File>
+			<File
+				RelativePath=".\fireReader.cpp">
+			</File>
+			<File
+				RelativePath=".\fluentParticle.cpp">
+			</File>
+			<File
+				RelativePath=".\fluentParticles.cpp">
+			</File>
+			<File
+				RelativePath=".\gridConversion.cpp">
+			</File>
+			<File
+				RelativePath=".\jdMAPReader.cpp">
+			</File>
+			<File
+				RelativePath=".\mfixReader.cpp">
+			</File>
+			<File
+				RelativePath=".\particle.cpp">
+			</File>
+			<File
+				RelativePath=".\plot3dReader.cpp">
+			</File>
+			<File
+				RelativePath=".\reiParticles.cpp">
+			</File>
+			<File
+				RelativePath=".\reiReader.cpp">
+			</File>
+			<File
+				RelativePath=".\starReader.cpp">
+			</File>
+			<File
+				RelativePath=".\tecplotReader.cpp">
+			</File>
+			<File
+				RelativePath=".\translateToVtk.cpp">
+			</File>
+			<File
+				RelativePath=".\viewCells.cpp">
+			</File>
+			<File
+				RelativePath=".\vtkCleanUnstructuredGrid.cxx">
 			</File>
 		</Filter>
 		<Filter
@@ -134,22 +185,52 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
 			<File
-				RelativePath=".\multiPlaneVtkOutput.h">
+				RelativePath=".\ansysReader.h">
 			</File>
 			<File
-				RelativePath=".\STAR_isosurface.h">
+				RelativePath=".\cfdGrid2Surface.h">
 			</File>
 			<File
-				RelativePath=".\STAR_node.h">
+				RelativePath=".\converter.h">
 			</File>
 			<File
-				RelativePath=".\STAR_octant.h">
+				RelativePath=".\enSightGoldReader.h">
 			</File>
 			<File
-				RelativePath=".\STAR_octree.h">
+				RelativePath=".\fluentParticle.h">
 			</File>
 			<File
-				RelativePath=".\STAR_surface.h">
+				RelativePath=".\fluentParticles.h">
+			</File>
+			<File
+				RelativePath=".\gridConversion.h">
+			</File>
+			<File
+				RelativePath=".\jdMAPReader.h">
+			</File>
+			<File
+				RelativePath=".\particle.h">
+			</File>
+			<File
+				RelativePath=".\plot3dReader.h">
+			</File>
+			<File
+				RelativePath=".\reiParticles.h">
+			</File>
+			<File
+				RelativePath=".\starReader.h">
+			</File>
+			<File
+				RelativePath=".\tecplotReader.h">
+			</File>
+			<File
+				RelativePath=".\viewCells.h">
+			</File>
+			<File
+				RelativePath=".\vtkCleanUnstructuredGrid.h">
+			</File>
+			<File
+				RelativePath=".\vtkEnSightFortranBinaryReader.h">
 			</File>
 		</Filter>
 		<Filter
