--- a/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="tcGUI"
+	Name="vtkTo3DTexture"
 	ProjectGUID="{EDEEFC20-C5B2-4070-89D7-F5472115E585}"
 	Keyword="Win32Proj">
 	<Platforms>
@@ -44,7 +44,8 @@
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCPostBuildEventTool"
+				CommandLine="copy $(TargetPath) %VE_SUITE_HOME%\bin\win32\$(TargetFileName)"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
