--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -30,14 +30,14 @@
 #
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-DIRS= ${VE_SUITE_HOME}/VE_Builder/Translator \
-      ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
-      ${VE_SUITE_HOME}/VE_Builder/Utilities \
-      ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
-      ${VE_SUITE_HOME}/VEOpen \
+DIRS= ${VE_SUITE_HOME}/VEOpen \
       ${VE_SUITE_HOME}/VE_CE \
       ${VE_SUITE_HOME}/VE_Conductor \
-      ${VE_SUITE_HOME}/VE_Xplorer
+      ${VE_SUITE_HOME}/VE_Xplorer \
+      ${VE_SUITE_HOME}/VE_Builder/Translator \
+      ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
+      ${VE_SUITE_HOME}/VE_Builder/Utilities \
+      ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI 
 #      ${VE_SUITE_HOME}/VE_Builder/WX_Translator
 
 # -----------------------------------------------------------------------------
@@ -47,14 +47,14 @@ default: all
 
 all: $(DIRS)
 
-${VE_SUITE_HOME}/VE_Builder/Translator \
-${VE_SUITE_HOME}/VE_Builder/Preprocessor \
-${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
-${VE_SUITE_HOME}/VE_Builder/Utilities \
 ${VE_SUITE_HOME}/VEOpen \
 ${VE_SUITE_HOME}/VE_CE \
 ${VE_SUITE_HOME}/VE_Conductor \
-${VE_SUITE_HOME}/VE_Xplorer::
+${VE_SUITE_HOME}/VE_Xplorer \
+${VE_SUITE_HOME}/VE_Builder/Translator \
+${VE_SUITE_HOME}/VE_Builder/Preprocessor \
+${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
+${VE_SUITE_HOME}/VE_Builder/Utilities::
 	cd $@ && $(MAKE)
 
 # -----------------------------------------------------------------------------
